# openassistants

./: .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  eslintrc.json  index.html  package.json  requirements.txt  ruff.toml  sitemap.xml  turbo.json
.github/.workflows/: docusaurus.yaml
.github/workflows/: docusaurus.yaml  release.yaml
assets/css/: styles.94c10dd0.css  styles.f5214513.css
assets/js/: 01a85c17.1404ecdf.js  01a85c17.9bb2e4c1.js  01a85c17.bfbc0da9.js  031793e1.2095049d.js  08cb6469.c66781b4.js  096bfee4.08305006.js  09facda7.123cd170.js  09facda7.763126aa.js  09facda7.a9035cc6.js  09facda7.cc36b7ce.js  0cfd53b9.5f5dc200.js  0cfd53b9.750c2bb5.js  0cfd53b9.8c606762.js  0cfd53b9.b5aadc69.js  0f5068eb.3030de37.js  0f5068eb.33f6591c.js  0f5068eb.565ca1df.js  0f5068eb.c438e3e5.js  130.d1e53d6b.js  14eb3368.0bfa3e27.js  14eb3368.6e40500b.js  14eb3368.cec902d8.js  16d5f91c.f946d855.js  17896441.901199fe.js  17896441.e383d91e.js  17896441.fa71aa8d.js  1eaa2b6e.14ebc945.js  1eaa2b6e.2de8bcae.js  1eaa2b6e.3e820674.js  1eaa2b6e.42f6615f.js  1eaa2b6e.50ea8bf5.js  1eaa2b6e.7a28eb12.js  1eaa2b6e.d4a36e83.js  1eaa2b6e.d8675291.js  1eaa2b6e.f8e922f1.js  21a14a43.36045cfe.js  21a14a43.543b9903.js  21a14a43.8a91aaa1.js  2551d999.3275bd20.js  2551d999.86ebc40e.js  (+203 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/assistants-not-agents/: index.html
blog/rag-and-guardrails/: index.html
blog/tags/: index.html
docs/: docusaurus.config.js  package-lock.json  package.json
docs/blog/: authors.yml
docs/contributing/: index.html
docs/docs/: contributing.md  getting-started.md  intro.md  live-demo.md  query-functions.md
example/: pyproject.toml  refresh-poetry.sh  run.sh
examples/fast-api-server/: .coveragerc  .flake8  .mypy.ini  pyproject.toml  requirements.txt  run.sh  tasks.py
examples/fast-api-server/dog_classification/schema/: dog_classification.json
examples/fast-api-server/dummy-data/: chevroletofwatsonville.csv  employees.csv  game_summaries.csv  player_boxscores.csv  team_boxscores.csv
examples/fast-api-server/example-data/: purchases.csv
examples/fast-api-server/fast_api_server/: find_email_by_name_function.py  main.py
examples/fast-api-server/tests/: test_app_basic.py  test_piedpiper.py
scripts/: refresh-poetry.sh  run.sh
(+42 files in other folders)
