[tool.poetry]
name = "fast-api-server"
version = "0.0.1"
description = ""
authors = ["Rick Lamers <ricklamers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
definitive-openassistants = { path = "../../packages/openassistants", extras = ["duckdb", "duckduckgo", "sql"], develop = true }
definitive-openassistants-fastapi = { path = "../../packages/openassistants-fastapi", develop = true }
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
watchfiles = "^0.21.0"
redis = "^5.0.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"
invoke = "^2.2.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
ruff = "^0.1.7"
pandas-stubs = "^2.1.4.231227"
types-jsonschema = "^4.20.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
